@@ -1,4 +1,6 @@
+DIST patchbundle-selinux-base-policy-2.20110726-r1.tar.bz2 18052 RMD160 cff13706b370498cf7193d968b3bff47a718ed84 SHA1 68dbdf8366068f80b85333ecc8bbc578567218c5 SHA256 ebfb12f861447c8865e28ff5ee06ff0d89f870db3b9745c2b18558772a783023
 DIST refpolicy-2.20110726.tar.bz2 588033 RMD160 9803effffe1dbb28d52bee03432e052f4fdc8d3f SHA1 cc27b06c3f541d8f2c57c52804ab6893afcd9db2 SHA256 8159b7535aa0f805510e4e3504b1317d7083b227f0ef3df51c6f002ed70ecedb
+EBUILD selinux-nagios-2.20110726-r1.ebuild 267 RMD160 e1ae6b337cf2cc561a437986009cf7aec3823e9f SHA1 4044434e5086f3a9cfcebd570f3703cc6179f985 SHA256 8fbc7681db2c3f2d4cbffabbc6fc2fb90ffba8a64a0cc7767818ce0f3b52bf13
 EBUILD selinux-nagios-2.20110726.ebuild 243 RMD160 8b6acb13c90922fa75e2277e21c7084657272062 SHA1 dab35a23351102b5e3929657723dc1b3ff385d30 SHA256 0ab230d0249bfe77ad17057f0d58ffb520a1ed8a15b2c5f2da4e24fde6662295
-MISC ChangeLog 432 RMD160 8c62986f579fdeb007e9400b0ce827965c8567bf SHA1 32928d7b83708a990acb7a3002d5cecd2e3a0ef9 SHA256 b8bd389eac0c13935b523cade3962766cacf06ec356c01e45a963182ff846692
+MISC ChangeLog 622 RMD160 d2128dc50f88e0d0db326f41a7216b120ce2cb76 SHA1 fce111e4a406166fc40c18f2bafbed1f7f8d8083 SHA256 ac8a955d8def8e80ee5a1d83a9167bbd92b3272df3ccf3d33993c7d440486a8d
 MISC metadata.xml 230 RMD160 58efea4721fd8a4a6ea1e79e4c3b626ed3af5ded SHA1 1b6651dff1ca7b54f2b6756b8c126f2cc68827d1 SHA256 4b2780b5258cf4a9bf47d433f6e923644c503d89d1cc15ea6bea154a9bcd7723
