@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-nagios/ChangeLog,v 1.2 2011/06/02 12:39:23 blueness Exp $
 
+*selinux-nagios-2.20110726-r1 (12 Aug 2011)
+
+  12 Aug 2011; <swift@gentoo.org> +selinux-nagios-2.20110726-r1.ebuild:
+  Fix #377329 - nrpe should be able to read its own configuration files
+
   02 Jun 2011; Anthony G. Basile <blueness@gentoo.org>
   selinux-nagios-2.20101213.ebuild:
   Stable amd64 x86
